--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fed24d-js-intro-inl-2-quiz-mulberry-beauty",
+  "name": "world-quiz",
   "private": true,
   "version": "0.0.0",
   "type": "module",
